# ndarray-math

./: Cargo.toml  README.md  flake.nix
.github/workflows/: build.yaml  docs.yaml
benches/: benchmarks.rs  euclidean.rs
src/: cosine.rs  euclidean.rs  lib.rs  ndarray_15_extra.rs
